--- a/dev.yaml
+++ b/dev.yaml
@@ -22,7 +22,7 @@
         rule: allow
         direction: incoming
         port: 22
-        from_ip: 192.168.62.0/24
+        # from_ip: 192.168.62.0/24
     - name: "UFW - Enable"
       community.general.ufw:
         state: enabled
