--- a/dev.yaml
+++ b/dev.yaml
@@ -13,11 +13,11 @@
       become_method: sudo
     - name: "Build stable and install neovim deb"
       shell: |
-        git git clone https://github.com/neovim/neovim && \
-        cd neovim && \
-        git checkout stable && \
-        make CMAKE_BUILD_TYPE=RelWithDebInfo && \
-        cd build  && \
+        git clone https://github.com/neovim/neovim
+        cd neovim
+        git checkout stable
+        make CMAKE_BUILD_TYPE=RelWithDebInfo
+        cd build
         cpack -G DEB && sudo dpkg -i nvim-linux64.deb
       args:
         chdir: ~/src
