--- a/dev.yaml
+++ b/dev.yaml
@@ -3,7 +3,7 @@
   hosts: localhost
   connection: local
   tasks:
-    - name: "Create src dir in home"
+    - name: "Create ~/src directory"
       file:
         path: ~/src
         state: directory
@@ -11,7 +11,7 @@
       become: yes
       become_user: root
       become_method: sudo
-    - name: "Install neovim prerequisites"
+    - name: "Neovim - Install prerequisites"
       apt:
         name: "{{ item }}"
         state: present
@@ -24,7 +24,7 @@
       become: yes
       become_user: root
       become_method: sudo
-    - name: "Build stable and install neovim deb"
+    - name: "Neovim - Build stable release & install from deb package"
       shell: |
         git clone https://github.com/neovim/neovim
         cd neovim
