--- a/dev.yaml
+++ b/dev.yaml
@@ -3,37 +3,108 @@
   hosts: localhost
   connection: local
   tasks:
-    - name: "Create ~/src directory"
-      file:
-        path: ~/src
-        state: directory
-        mode: 0755
-      become: yes
-      become_user: root
-      become_method: sudo
-    - name: "Neovim - Install prerequisites"
+    - name: "Install zsh"
       apt:
-        name: "{{ item }}"
+        name: zsh
         state: present
-      with_items:
-        - ninja-build
-        - gettext
-        - cmake
-        - unzip
-        - curl
-      become: yes
+      become: true
       become_user: root
       become_method: sudo
-    - name: "Neovim - Build stable release & install from deb package"
-      shell: |
-        git clone https://github.com/neovim/neovim
-        cd neovim
-        git checkout stable
-        make CMAKE_BUILD_TYPE=RelWithDebInfo
-        cd build
-        cpack -G DEB && sudo dpkg -i nvim-linux64.deb
-      args:
-        chdir: ~/src
-      become: yes
+
+    - name: "Install & configure oh-my-zsh"
+      block:
+        - name: "Install oh-my-zsh"
+          shell: |
+            sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+          args:
+            chdir: ~
+        - name: "Install zsh-syntax-highlighting as a plugin"
+          shell: |
+            git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+        - name: "Enable zsh-syntax-highlighting plugin"
+          lineinfile:
+            path: ~/.zshrc
+            regex: "^plugins=\\(.*\\)"
+            line: "plugins=(git zsh-syntax-highlighting)"
+            state: present
+        - name: "Install catppuccino zsh-syntax-highlighting"
+          shell: |
+            git clone https://github.com/catppuccin/zsh-syntax-highlighting.git
+            cd zsh-syntax-highlighting/themes/
+            mkdir -p ~/.zsh
+            cp -v catppuccin_mocha-zsh-syntax-highlighting.zsh ~/.zsh/
+        - name: "Enable catppuccino zsh-syntax-highlighting"
+          lineinfile:
+            path: ~/.zshrc
+            insertbefore: "plugins=\\(.*\\)"
+            line: "source ~/.zsh/catppuccin_mocha-zsh-syntax-highlighting.zsh"
+            state: present
+        - name: "Install kubectl"
+          shell: |
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+        - name: "Install kubectx"
+          shell: |
+            sudo git clone https://github.com/ahmetb/kubectx /opt/kubectx
+            sudo ln -s /opt/kubectx/kubectx /usr/local/bin/kubectx
+            sudo ln -s /opt/kubectx/kubens /usr/local/bin/kubens
+        - name: "Enable kubectl autocompletion"
+          lineinfile:
+            path: ~/.zshrc
+            insertafter: "plugins=\\(.*\\)"
+            line: |
+
+              source <(kubectl completion zsh)
+              alias k=kubectl
+              alias kx=kubectx
+              alias kn=kubens
+              alias ke='kubectl get events --all-namespaces --sort-by=.metadata.creationTimestamp -w'
+              complete -F __start_kubectl k
+              complete -F __start_kubectl kx
+              complete -F __start_kubectl kn
+
+            state: present
+
+      become: true
+      become_user: amnoth
+      become_method: sudo
+
+    - name: "Install & configure Neovim"
+      block:
+        - name: "Create ~/src directory"
+          file:
+            path: ~/src
+            state: directory
+            mode: 0755
+
+        - name: "Neovim - Install prerequisites"
+          apt:
+            name: "{{ item }}"
+            state: present
+          with_items:
+            - ninja-build
+            - gettext
+            - cmake
+            - unzip
+            - curl
+
+        - name: "Neovim - Build stable release & install from deb package"
+          shell: |
+            git clone https://github.com/neovim/neovim
+            cd neovim
+            git checkout stable
+            make CMAKE_BUILD_TYPE=RelWithDebInfo
+            cd build
+            cpack -G DEB && sudo dpkg -i nvim-linux64.deb
+          args:
+            chdir: ~/src
+
+        - name: "Neovim - Use nvim for vi"
+          alternatives: name=vi path=/usr/bin/nvim
+        - name: "Neovim - Use nvim for vim"
+          alternatives: name=vim path=/usr/bin/nvim
+        - name: "Neovim - Use nvim for editor"
+          alternatives: name=editor path=/usr/bin/nvim
+      become: true
       become_user: root
       become_method: sudo
