--- a/dev.yaml
+++ b/dev.yaml
@@ -116,7 +116,7 @@
             sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
           args:
             chdir: ~
-        zsh-autosuggestions
+        # zsh-autosuggestions
         - name: "Install zsh-syntax-highlighting as a plugin"
           shell: |
             git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
@@ -194,7 +194,7 @@
       become: true
       become_user: amnoth
       become_method: sudo
-    
+
     # docker
     - name: "Install & configure docker"
       block:
