--- a/dev.yaml
+++ b/dev.yaml
@@ -16,98 +16,106 @@
         enabled: true
 
     # shell install
-    - name: "Install zsh"
-      apt:
+    - name: Install zsh
+      ansible.builtin.apt:
         name: zsh
         state: present
       become: true
       become_user: root
-      become_method: sudo
-    - name: "Install tmux"
-      apt:
+      become_method: ansible.builtin.sudo
+    - name: Install tmux
+      ansible.builtin.apt:
         name: tmux
         state: present
       become: true
       become_user: root
-      become_method: sudo
+      become_method: ansible.builtin.sudo
     # shell config
-    - name: "Configure shell"
+    - name: Configure shell
+      become: true
+      become_user: amnoth
+      become_method: ansible.builtin.sudo
+      vars:
+        zshrc_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/.zshrc
+        tmux_conf_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/tmux.conf
+        p10k_zsh_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/.p10k.zsh
       block:
         # tmux config
-        - name: "Install tmux package manager"
-          shell: |
-            git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-          args:
-            chdir: ~
+        - name: Install tmux package manager # noqa: latest
+          ansible.builtin.git:
+            repo: https://github.com/tmux-plugins/tpm
+            dest: ~/.tmux/plugins/tpm
+            version: HEAD
         # make sure ~/.config/tmux/ exists
-        - name: "Create ~/.config/tmux directory"
-          file:
+        - name: Create ~/.config/tmux directory
+          ansible.builtin.file:
             path: ~/.config/tmux
             state: directory
-            mode: 0755
+            mode: "0755"
         # oh-my-zsh
-        - name: "Install oh-my-zsh"
-          shell: |
+        - name: Install oh-my-zsh
+          ansible.builtin.shell: |
             sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
           args:
             chdir: ~
-        - name: "Install powerline10k theme"
-          shell: |
-            git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
+        - name: Install powerline10k # noqa: latest
+          ansible.builtin.git:
+            repo: https://github.com/romkatv/powerlevel10k.git
+            depth: 1
+            version: HEAD
+            dest: ~/.oh-my-zsh/custom/themes/powerlevel10k
         # zsh-autosuggestions
-        - name: "Install zsh-syntax-highlighting as a plugin"
-          shell: |
-            git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
-        - name: "Install catppuccin zsh-syntax-highlighting"
-          shell: |
+        - name: Install zsh-syntax-highlighting # noqa: latest
+          ansible.builtin.git:
+            repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+            version: HEAD
+            dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+        - name: Install catppuccin zsh-syntax-highlighting
+          ansible.builtin.shell: |
             git clone https://github.com/catppuccin/zsh-syntax-highlighting.git
             cd zsh-syntax-highlighting/themes/
             mkdir -p ~/.zsh
             cp -v catppuccin_mocha-zsh-syntax-highlighting.zsh ~/.zsh/
         # kubectl
-        - name: "Install kubectl"
-          shell: |
+        - name: Install kubectl
+          ansible.builtin.shell: |
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        - name: "Install kubectx"
-          shell: |
+        - name: Install kubectx
+          ansible.builtin.shell: |
             sudo git clone https://github.com/ahmetb/kubectx /opt/kubectx
             sudo ln -s /opt/kubectx/kubectx /usr/local/bin/kubectx
             sudo ln -s /opt/kubectx/kubens /usr/local/bin/kubens
         # helm
-        - name: "Install helm"
-          shell: |
+        - name: Install helm
+          ansible.builtin.shell: |
             curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
         # flux
-        - name: "Install flux cli"
-          shell: |
+        - name: Install flux cli
+          ansible.builtin.shell: |
             curl -s https://fluxcd.io/install.sh | sudo bash
         # download config files
         - name: "Download ~/.zshrc"
-          get_url:
+          ansible.builtin.get_url:
             url: "{{ zshrc_url }}"
             dest: ~/.zshrc
-            mode: 0644
+            mode: "0644"
         - name: "Download ~/.config/tmux/tmux.conf"
-          get_url:
+          ansible.builtin.get_url:
             url: "{{ tmux_conf_url }}"
             dest: ~/.config/tmux/tmux.conf
-            mode: 0644
+            mode: "0644"
         - name: "Download ~/.p10k.zsh"
-          get_url:
+          ansible.builtin.get_url:
             url: "{{ p10k_zsh_url }}"
             dest: ~/.p10k.zsh
-            mode: 0644
-      vars:
-        zshrc_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/.zshrc
-        tmux_conf_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/tmux.conf
-        p10k_zsh_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/.p10k.zsh
-      become: true
-      become_user: amnoth
-      become_method: sudo
+            mode: "0644"
 
     # docker
     - name: "Install & configure docker"
+      become: true
+      become_user: root
+      become_method: ansible.builtin.sudo
       block:
         - name: "Update apt cache"
           ansible.builtin.apt:
@@ -148,20 +156,20 @@
             name: "amnoth"
             append: true
             groups: docker
+
+    - name: Install & configure Neovim
       become: true
       become_user: root
-      become_method: sudo
-
-    - name: "Install & configure Neovim"
+      become_method: ansible.builtin.sudo
       block:
         - name: "Create ~/src directory"
-          file:
+          ansible.builtin.file:
             path: ~/src
             state: directory
-            mode: 0755
+            mode: "0755"
 
         - name: "Neovim - Install prerequisites"
-          apt:
+          ansible.builtin.apt:
             name: "{{ item }}"
             state: present
           with_items:
@@ -171,8 +179,8 @@
             - unzip
             - curl
 
-        - name: "Neovim - Build stable release & install from deb package"
-          shell: |
+        - name: Neovim - Build stable release & install from deb package
+          ansible.builtin.shell: |
             git clone https://github.com/neovim/neovim
             cd neovim
             git checkout stable
@@ -182,12 +190,37 @@
           args:
             chdir: ~/src
 
-        - name: "Neovim - Use nvim for vi"
-          alternatives: name=vi path=/usr/bin/nvim
-        - name: "Neovim - Use nvim for vim"
-          alternatives: name=vim path=/usr/bin/nvim
-        - name: "Neovim - Use nvim for editor"
-          alternatives: name=editor path=/usr/bin/nvim
+        - name: Neovim - Use nvim for vi
+          community.general.alternatives:
+            name: vi
+            path: /usr/bin/nvim
+        - name: Neovim - Use nvim for vim
+          community.general.alternatives:
+            name: vim
+            path: /usr/bin/nvim
+        - name: Neovim - Use nvim for editor
+          community.general.alternatives:
+            name: editor
+            path: /usr/bin/nvim
+
+    - name: Ansible development tools
       become: true
       become_user: root
-      become_method: sudo
+      become_method: ansible.builtin.sudo
+      block:
+        - name: Install pip3
+          ansible.builtin.apt:
+            name: python3-pip
+            state: present
+        - name: Install ansible-lint
+          ansible.builtin.pip:
+            name: ansible-lint
+        - name: Add ~/.local/bin to path
+          ansible.builtin.copy:
+            content: "export PATH=$PATH:{{ local_bin }}"
+            dest: "/etc/profile.d/home-local-bin.sh"
+            owner: root
+            group: root
+            mode: "0644"
+          vars:
+            local_bin: "$HOME/.local/bin"
