--- a/dev.yaml
+++ b/dev.yaml
@@ -3,6 +3,10 @@
   hosts: localhost
   connection: local
   tasks:
+    - name: Get deb architecture
+      ansible.builtin.shell: |
+        dpkg --print-architecture
+      register: deb_architecture
     # unattended upgrades
     - name: Install Unattended Upgrades
       ansible.builtin.apt:
@@ -79,7 +83,7 @@
         # kubectl
         - name: Install kubectl
           ansible.builtin.shell: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/{{ deb_architecture }}/kubectl"
             sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
         - name: Install kubectx
           ansible.builtin.shell: |
@@ -137,7 +141,7 @@
             state: present
         - name: "Add apt repository for stable Docker version"
           ansible.builtin.apt_repository:
-            repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+            repo: deb [arch={{ deb_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
             state: present
         - name: "Install Docker"
           ansible.builtin.apt:
@@ -203,11 +207,12 @@
             name: editor
             path: /usr/bin/nvim
 
-    - name: Ansible development tools
+    - name: Development tools
       become: true
       become_user: root
       become_method: ansible.builtin.sudo
       block:
+        # ansible
         - name: Install pip3
           ansible.builtin.apt:
             name: python3-pip
@@ -224,3 +229,19 @@
             mode: "0644"
           vars:
             local_bin: "$HOME/.local/bin"
+        # nodejs
+        - name: Install the gpg key for nodejs lts
+          ansible.builtin.apt_key:
+            url: https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key
+            state: present
+        - name: Install nodejs lts repo
+          ansible.builtin.apt_repository:
+            repo: "deb [arch=amd64] https://deb.nodesource.com/node_{{ node_version }} nodistro main"
+            state: present
+            update_cache: true
+          vars:
+            node_version: "21.x"
+        - name: Install nodejs lts
+          ansible.builtin.apt:
+            name: nodejs
+            state: present
