--- a/dev-opensuse.yaml
+++ b/dev-opensuse.yaml
@@ -30,10 +30,16 @@
               - flux2-cli
               - ansible-lint
             state: present
+        - name: Add docker group
+          ansible.builtin.group:
+            name: docker
+            state: present
         - name: Create amnoth user
           ansible.builtin.user:
             name: amnoth
             shell: /bin/zsh
+            groups:
+              - docker
             createhome: true
             state: present
         - name: Add amnoth to sudoers
