--- a/dev-ubuntu.yaml
+++ b/dev-ubuntu.yaml
@@ -3,6 +3,8 @@
   hosts: localhost
   connection: local
   tasks:
+    vars:
+        username: amnoth
     - name: Get deb architecture
       ansible.builtin.shell: |
         dpkg --print-architecture
@@ -21,172 +23,125 @@
         name: unattended-upgrades.service
         state: started
         enabled: true
-
-    # shell install
-    - name: Install zsh
+    # baseline packages
+    - name: Install baseline packages
       ansible.builtin.apt:
-        name: zsh
-        state: present
+        name:
+          - acl
+          - git
+          - curl
+    # kubectl
+    - name: kubectl
       become: true
-      become_user: root
-      become_method: ansible.builtin.sudo
-    - name: Install tmux
-      ansible.builtin.apt:
-        name: tmux
-        state: present
-      become: true
-      become_user: root
-      become_method: ansible.builtin.sudo
-    # shell config
-    - name: Configure shell
-      become: true
-      become_user: amnoth
-      become_method: ansible.builtin.sudo
-      vars:
-        zshrc_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/.zshrc
-        tmux_conf_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/tmux.conf
-        p10k_zsh_url: https://raw.githubusercontent.com/amnoth/dotfiles/main/.p10k.zsh
       block:
-        # tmux config
-        - name: Install tmux package manager # noqa: latest
-          ansible.builtin.git:
-            repo: https://github.com/tmux-plugins/tpm
-            dest: ~/.tmux/plugins/tpm
-            version: HEAD
-        # make sure ~/.config/tmux/ exists
-        - name: Create ~/.config/tmux directory
-          ansible.builtin.file:
-            path: ~/.config/tmux
-            state: directory
-            mode: "0755"
-        # oh-my-zsh
-        - name: Install oh-my-zsh
-          ansible.builtin.shell: |
-            sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-          args:
-            chdir: ~
-        - name: Install powerline10k # noqa: latest
-          ansible.builtin.git:
-            repo: https://github.com/romkatv/powerlevel10k.git
-            depth: 1
-            version: HEAD
-            dest: ~/.oh-my-zsh/custom/themes/powerlevel10k
-        # zsh-autosuggestions
-        - name: Install zsh-syntax-highlighting # noqa: latest
-          ansible.builtin.git:
-            repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
-            version: HEAD
-            dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
-        - name: Install catppuccin zsh-syntax-highlighting
-          ansible.builtin.shell: |
-            git clone https://github.com/catppuccin/zsh-syntax-highlighting.git
-            cd zsh-syntax-highlighting/themes/
-            mkdir -p ~/.zsh
-            cp -v catppuccin_mocha-zsh-syntax-highlighting.zsh ~/.zsh/
-        # kubectl
-        - name: Install kubectl
-          ansible.builtin.shell: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/{{ deb_architecture }}/kubectl"
-            sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
-        - name: Install kubectx
-          ansible.builtin.shell: |
-            sudo git clone https://github.com/ahmetb/kubectx /opt/kubectx
-            sudo ln -s /opt/kubectx/kubectx /usr/local/bin/kubectx
-            sudo ln -s /opt/kubectx/kubens /usr/local/bin/kubens
-        # helm
-        - name: Install helm
-          ansible.builtin.shell: |
-            curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
-        # flux
-        - name: Install flux cli
-          ansible.builtin.shell: |
-            curl -s https://fluxcd.io/install.sh | sudo bash
-        # download config files
-        - name: "Download ~/.zshrc"
-          ansible.builtin.get_url:
-            url: "{{ zshrc_url }}"
-            dest: ~/.zshrc
-            mode: "0644"
-        - name: "Download ~/.config/tmux/tmux.conf"
-          ansible.builtin.get_url:
-            url: "{{ tmux_conf_url }}"
-            dest: ~/.config/tmux/tmux.conf
-            mode: "0644"
-        - name: "Download ~/.p10k.zsh"
-          ansible.builtin.get_url:
-            url: "{{ p10k_zsh_url }}"
-            dest: ~/.p10k.zsh
-            mode: "0644"
-
-    # docker
-    - name: "Install & configure docker"
-      become: true
-      become_user: root
-      become_method: ansible.builtin.sudo
-      block:
-        - name: "Update apt cache"
+        - name: kubectl | install dependancies
           ansible.builtin.apt:
-            update_cache: true
-            cache_valid_time: 3600
-        - name: "Install dependencies"
+            name:
+              - apt-transport-https
+              - ca-certificates
+              - curl
+            state: present
+        - name: kubectl | add apt key to keyring
+          ansible.builtin.get_url:
+            url: https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key
+            dest: /etc/apt/keyrings/kubernetes-apt-keyring.asc
+        - name: kubectl | add apt repository
+          ansible.builtin.apt_repository:
+            repo: deb [arch={{ deb_architecture }} signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.asc] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /
+            state: present
+        - name: kubectl | install
           ansible.builtin.apt:
-            name: "{{ packages }}"
+            name: kubectl
             state: present
             update_cache: true
-          vars:
-            packages:
+            cache_valid_time: 3600
+    # helm
+    - name: helm
+      become: true
+      block:
+        - name: helm | install dependancies
+          ansible.builtin.apt:
+            name:
+              - apt-transport-https
+            state: present
+        - name: helm | add apt key to keyring
+          ansible.builtin.get_url:
+            url: https://baltocdn.com/helm/signing.asc
+            dest: /etc/apt/keyrings/helm-apt-keyring.asc
+        - name: helm | add apt repository
+          ansible.builtin.apt_repository:
+            repo: deb [arch={{ deb_architecture }} signed-by=/etc/apt/keyrings/helm-apt-keyring.asc] https://baltocdn.com/helm/stable/debian/ all main
+            state: present
+        - name: helm | install
+          ansible.builtin.apt:
+            name: helm
+            state: present
+            update_cache: true
+            cache_valid_time: 3600
+    # flux
+    - name: flux
+      become: true
+      block:
+        - name: flux | install # poorly...
+          ansible.builtin.shell: |
+            curl -s https://fluxcd.io/install.sh | sudo bash
+    # docker
+    - name: docker
+      become: true
+      block:
+        - name: docker | install dependencies
+          ansible.builtin.apt:
+            name:
               - ca-certificates
               - curl
               - gnupg
-        - name: "Add apt signing key for docker"
-          ansible.builtin.apt_key:
-            url: https://download.docker.com/linux/ubuntu/gpg
-            state: present
-        - name: "Add apt repository for stable Docker version"
-          ansible.builtin.apt_repository:
-            repo: deb [arch={{ deb_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-            state: present
-        - name: "Install Docker"
-          ansible.builtin.apt:
-            name: "{{ packages }}"
             state: present
             update_cache: true
-          vars:
-            packages:
+            cache_valid_time: 3600
+        - name: docker | add apt key to keyring
+          ansible.builtin.get_url:
+            url: https://download.docker.com/linux/ubuntu/gpg
+            dest: /etc/apt/keyrings/docker-apt-keyring.pgp
+        - name: docker | add apt repository
+          ansible.builtin.apt_repository:
+            repo: deb [arch={{ deb_architecture }} signed-by=/etc/apt/keyrings/docker-apt-keyring.pgp] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+            state: present
+        - name: docker | install
+          ansible.builtin.apt:
+            name:
               - docker-ce
               - docker-ce-cli
               - containerd.io
               - docker-buildx-plugin
               - docker-compose-plugin
-        - name: "Add users to docker group"
+            state: present
+            update_cache: true
+            cache_valid_time: 3600
+        - name: docker | add user to docker group
           ansible.builtin.user:
-            name: "amnoth"
+            name: "{{ username }}"
             append: true
             groups: docker
-
-    - name: Install & configure Neovim
+    # neovim - build from source
+    - name: neovim
       become: true
       become_user: root
-      become_method: ansible.builtin.sudo
       block:
-        - name: "Create ~/src directory"
+        - name: neovim | create ~/src directory
           ansible.builtin.file:
             path: ~/src
             state: directory
             mode: "0755"
-
-        - name: "Neovim - Install prerequisites"
+        - name: neovim | install prerequisites
           ansible.builtin.apt:
-            name: "{{ item }}"
+            name:
+              - ninja-build
+              - gettext
+              - cmake
+              - unzip
+              - curl
             state: present
-          with_items:
-            - ninja-build
-            - gettext
-            - cmake
-            - unzip
-            - curl
-
-        - name: Neovim - Build stable release & install from deb package
+        - name: neovim | build stable release & install from deb package
           ansible.builtin.shell: |
             git clone https://github.com/neovim/neovim
             cd neovim
@@ -196,97 +151,117 @@
             cpack -G DEB && sudo dpkg -i nvim-linux64.deb
           args:
             chdir: ~/src
-
-        - name: Neovim - Use nvim for vi
+        - name: neovim | use nvim for vi
           community.general.alternatives:
             name: vi
             path: /usr/bin/nvim
-        - name: Neovim - Use nvim for vim
+        - name: neovim | use nvim for vim
           community.general.alternatives:
             name: vim
             path: /usr/bin/nvim
-        - name: Neovim - Use nvim for editor
+        - name: neovim | use nvim for editor
           community.general.alternatives:
             name: editor
             path: /usr/bin/nvim
-
-    - name: Development tools
+    # (deprecated) neovim - ppa is too old!
+    # - name: neovim
+    #   become: true
+    #   block:
+    #     - name: neovim | add apt ppa
+    #       ansible.builtin.apt_repository:
+    #         repo: ppa:neovim-ppa/stable
+    #     - name: neovim | install
+    #       ansible.builtin.apt:
+    #         name: neovim
+    #         state: present
+    #         update_cache: true
+    #         cache_valid_time: 3600
+    # user
+    - name: users
       become: true
-      become_user: root
-      become_method: ansible.builtin.sudo
       block:
-        # ansible
-        - name: Install pip3
-          ansible.builtin.apt:
-            name: python3-pip
-            state: present
-        - name: Install ansible-lint
-          ansible.builtin.pip:
-            name: ansible-lint
-        - name: Add ~/.local/bin to path
-          ansible.builtin.copy:
-            content: "export PATH=$PATH:{{ local_bin }}"
-            dest: "/etc/profile.d/home-local-bin.sh"
-            owner: root
-            group: root
-            mode: "0644"
-          vars:
-            local_bin: "$HOME/.local/bin"
-        # nodejs
-        - name: Install the gpg key for nodejs lts
-          ansible.builtin.apt_key:
-            url: https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key
-            state: present
-        - name: Install nodejs lts repo
-          ansible.builtin.apt_repository:
-            repo: "deb [arch=amd64] https://deb.nodesource.com/node_{{ node_version }} nodistro main"
-            state: present
-            update_cache: true
-          vars:
-            node_version: "21.x"
-        - name: Install nodejs lts
-          ansible.builtin.apt:
-            name: nodejs
-            state: present
-        # Swift (todo: add key check, and arm64 check)
-        - name: Swift prerequisites
-            # https://download.swift.org/swift-{{ swift_version  }}-release/ubuntu2204/swift-{{ swift_version  }}-RELEASE/swift-{{ swift_version  }}-RELEASE-ubuntu22.04.tar.gz
+        - name: users | install zsh & tools
           ansible.builtin.apt:
             name:
-              - binutils
-              - git
-              - gnupg2
-              - libc6-dev
-              - libcurl4-openssl-dev
-              - libedit2
-              - libgcc-9-dev
-              - libpython3.10 # libpython3.8
-              - libsqlite3-0
-              - libstdc++-9-dev
-              - libxml2-dev
-              - libz3-dev
-              - pkg-config
-              - tzdata
-              - unzip
-              - zlib1g-dev
+              - zsh
+              - tmux
+              - stow
+        - name: users | create
+          ansible.builtin.user:
+            name: "{{ username }}"
+            shell: /bin/zsh
+            groups:
+              - docker
+            createhome: true
             state: present
-        - name: Download swift
-          vars:
-            swift_version: "5.9.2"
-          ansible.builtin.get_url:
-            url: "https://download.swift.org/swift-{{ swift_version }}-release/ubuntu2204/swift-{{ swift_version }}-RELEASE/swift-{{ swift_version }}-RELEASE-ubuntu22.04.tar.gz"
-            dest: "/tmp/swift.tar.gz"
-            mode: "0644"
-        - name: Extract swift
-          ansible.builtin.unarchive:
-            src: "/tmp/swift.tar.gz"
-            dest: "/"
-            extra_opts:
-              - "--strip-components=1"
-            remote_src: true
-            creates: "/tmp/swift/usr/bin/swift"
-        - name: Set chmod 755 /usr/lib/swift
+        - name: users | add to sudoers
+          ansible.builtin.copy:
+            content: "{{ username }} ALL=(ALL) NOPASSWD:ALL"
+            dest: "/etc/sudoers.d/{{ username }}"
+            owner: root
+            group: root
+            mode: "0440"
+        - name: users | add authorized key from github
+          ansible.posix.authorized_key:
+            user: "{{ username }}"
+            state: present
+            key: "https://www.github.com/{{ username }}.keys"
+    # user config
+    - name: user config
+      become: true
+      become_user: "{{ username }}"
+      block:
+        - name: user config | install tmux package manager # noqa: latest
+          ansible.builtin.git:
+            repo: https://github.com/tmux-plugins/tpm
+            dest: ~/.tmux/plugins/tpm
+            version: HEAD
+        - name: user config | create ~/.config/tmux directory
           ansible.builtin.file:
-            path: "/usr/lib/swift"
-            recurse: true
+            path: ~/.config/tmux
+            state: directory
             mode: "0755"
+        - name: user config | install oh-my-zsh
+          ansible.builtin.shell: |
+            sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+          args:
+            chdir: ~
+        - name: user config | install powerline10k # noqa: latest
+          ansible.builtin.git:
+            repo: https://github.com/romkatv/powerlevel10k.git
+            depth: 1
+            version: HEAD
+            dest: ~/.oh-my-zsh/custom/themes/powerlevel10k
+        - name: user config | install zsh-syntax-highlighting # noqa: latest
+          ansible.builtin.git:
+            repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+            version: HEAD
+            dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+        - name: user config | install catppuccin zsh-syntax-highlighting
+          ansible.builtin.shell: |
+            git clone https://github.com/catppuccin/zsh-syntax-highlighting.git
+            cd zsh-syntax-highlighting/themes/
+            mkdir -p ~/.zsh
+            cp -v catppuccin_mocha-zsh-syntax-highlighting.zsh ~/.zsh/
+        - name: user config | download dotfiles # noqa: latest
+          ansible.builtin.git:
+            repo: https://github.com/amnoth/dotfiles.git
+            dest: ~/.dotfiles
+            version: HEAD
+        # stow dotfiles
+        - name: user config | stow dotfiles
+          ansible.builtin.shell: |
+            cd ~/.dotfiles
+            stow --adopt .
+            git restore .
+            stow .
+        # dev tools
+        # todo:
+        #   npm
+        #   ansible
+        #   - ansible-lint
+        #   php
+        #   typescript
+        #   swift
+        #   go
+        #   rust
