--- a/dev-ubuntu.yaml
+++ b/dev-ubuntu.yaml
@@ -30,6 +30,8 @@
           - acl
           - git
           - curl
+          # dev tools
+          - jq
     # kubectl
     - name: kubectl
       become: true
@@ -256,10 +258,42 @@
             git restore .
             stow .
         # dev tools
+        - name: dev tools
+          become: true
+          block:
+            # pip3
+            - name: dev tools | pip3 | install
+              ansible.builtin.apt:
+                name: python3-pip
+                state: present
+            # ansible-lint
+            - name: dev tools | ansible-lint | install
+              ansible.builtin.pip:
+                name: ansible-lint
+            - name: dev tools | ansible-lint | add ~/.local/bin to path
+              ansible.builtin.copy:
+                content: "export PATH=$PATH:$HOME/.local/bin"
+                dest: "/etc/profile.d/home-dotlocal-bin.sh"
+                owner: root
+                group: root
+                mode: "0644"
+            # nodejs
+            - name: dev tools | nodejs | add apt key to keyring
+              ansible.builtin.get_url:
+                url: https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key
+                dest: /etc/apt/keyrings/nodesource-apt-keyring.asc
+            - name: dev tools | nodejs | add apt repository
+              ansible.builtin.apt_repository:
+                repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/nodesource-apt-keyring.asc] https://deb.nodesource.com/node_{{ node_version }} nodistro main"
+                state: present
+                update_cache: true
+              vars:
+                node_version: "21.x"
+            - name: dev tools | nodejs | install
+              ansible.builtin.apt:
+                name: nodejs
+                state: present
         # todo:
-        #   npm
-        #   ansible
-        #   - ansible-lint
         #   php
         #   typescript
         #   swift
